[gd_scene load_steps=9 format=2]

[ext_resource path="res://Select_Questions_Page/604a0cadf94914c7ee6c6e552e9b4487-curved-check-mark-circle-icon-by-vexels.png" type="Texture" id=1]
[ext_resource path="res://Select_Questions_Page/left-arrow-back.png" type="Texture" id=2]
[ext_resource path="res://Leaderboard/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Select_Questions_Page/Select_Questions_Page.gd" type="Script" id=4]
[ext_resource path="res://Select_Questions_Page/Questions_List/Questions_List.tscn" type="PackedScene" id=5]
[ext_resource path="res://Select_Questions_Page/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 6 )

[node name="Select_Questions_Page" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="BackgroundColor"]
margin_left = 176.0
margin_top = 24.0
margin_right = 848.0
margin_bottom = 80.0
text = "YOUR QUESTIONS:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondTitle" type="Label" parent="BackgroundColor"]
margin_left = 176.0
margin_top = 72.0
margin_right = 848.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "(Select 5 questions to proceed)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBackButton" type="TextureButton" parent="BackgroundColor"]
margin_left = 16.0
margin_top = 520.0
margin_right = 528.0
margin_bottom = 1032.0
rect_scale = Vector2( 0.142873, 0.136946 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProceedButton" type="TextureButton" parent="BackgroundColor"]
margin_left = 936.0
margin_top = 520.0
margin_right = 1448.0
margin_bottom = 1032.0
rect_scale = Vector2( 0.142873, 0.136946 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollBar" type="ColorRect" parent="BackgroundColor"]
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 512.0
color = Color( 0.258824, 0.384314, 0.415686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundColor/ScrollBar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundColor/ScrollBar/ScrollContainer"]
margin_bottom = 640.0
custom_constants/separation = 128

[node name="Question1" type="Control" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer"]
rect_pivot_offset = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question1"]
margin_left = 256.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q1button" type="Button" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question1/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
rect_scale = Vector2( 0.997725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question1/Panel/Q1button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<CLICK HERE>"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question2" type="Control" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 128.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question2"]
margin_left = 256.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q2button" type="Button" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
rect_scale = Vector2( 0.997725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question2/Panel/Q2button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<CLICK HERE>"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question3" type="Control" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 256.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question3"]
margin_left = 256.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q3button" type="Button" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question3/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
rect_scale = Vector2( 0.997725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question3/Panel/Q3button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<CLICK HERE>"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question4" type="Control" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 384.0
margin_bottom = 384.0
rect_pivot_offset = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question4"]
margin_left = 256.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q4button" type="Button" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question4/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
rect_scale = Vector2( 0.997725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question4/Panel/Q4button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<CLICK HERE>"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question5" type="Control" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 512.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question5"]
margin_left = 256.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q5button" type="Button" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question5/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
rect_scale = Vector2( 0.997725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question5/Panel/Q5button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<CLICK HERE>"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="Control" parent="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 640.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionsListPage" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="BackgroundColor/GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="pressed" from="BackgroundColor/ProceedButton" to="." method="_on_ProceedButton_pressed"]
[connection signal="pressed" from="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question1/Panel/Q1button" to="." method="_on_Q1button_pressed"]
[connection signal="pressed" from="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question2/Panel/Q2button" to="." method="_on_Q2button_pressed"]
[connection signal="pressed" from="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question3/Panel/Q3button" to="." method="_on_Q3button_pressed"]
[connection signal="pressed" from="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question4/Panel/Q4button" to="." method="_on_Q4button_pressed"]
[connection signal="pressed" from="BackgroundColor/ScrollBar/ScrollContainer/VBoxContainer/Question5/Panel/Q5button" to="." method="_on_Q5button_pressed"]
